[package]
name = "skrapy"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
sha1 = "0.10"
tokio-util = "0.7"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"

[dev-dependencies]
httpmock = "0.6"
http = "1"
